Update and rename php.yml to php_sample_test01.yml

--- a/.github/workflows/php_sample_test01.yml
+++ b/.github/workflows/php_sample_test01.yml
@@ -36,5 +36,5 @@ jobs:
     #   run: composer run-script test
 
     - name: Test sample program
-      run: php sample/test.php
+      run: php sample/test01.php
     
