--- a/sample2/composer.json
+++ b/sample2/composer.json
@@ -1,5 +1,6 @@
 {
-    "require": {
-      "google/apiclient": "^2.0"
-    }
+  "require": {
+      "phpmailer/phpmailer": "^6.8",
+      "google/apiclient": "^2.15"
+  }
 }
