--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
-      workdir: html
+      working-directory: html
 
     - name: Cache Composer packages
       id: composer-cache
