--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -18,6 +18,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Validate composer.json and composer.lock
+      working-directory: ./html
       run: composer validate --strict
 
     - name: Cache Composer packages
