--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,6 +22,7 @@ jobs:
       run: composer validate --strict
 
     - name: Cache Composer packages
+      working-directory: ./html
       id: composer-cache
       uses: actions/cache@v3
       with:
@@ -31,6 +32,7 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Install dependencies
+      working-directory: ./html
       run: composer install --prefer-dist --no-progress
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
